logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T080000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T13:52:32.814+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [queued]>
[2025-07-24T13:52:32.825+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [queued]>
[2025-07-24T13:52:32.826+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T13:52:32.841+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 08:00:00+00:00
[2025-07-24T13:52:32.847+0000] {standard_task_runner.py:60} INFO - Started process 404 to run task
[2025-07-24T13:52:32.849+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T08:00:00+00:00', '--job-id', '352', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp3cjfz52k']
[2025-07-24T13:52:32.852+0000] {standard_task_runner.py:88} INFO - Job 352: Subtask Load_songplays_fact_table
[2025-07-24T13:52:32.918+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:52:32.987+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T08:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T08:00:00+00:00'
[2025-07-24T13:52:32.993+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:52:33.006+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T080000, start_date=20250724T135232, end_date=20250724T135233
[2025-07-24T13:52:33.020+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 352 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 404)
[2025-07-24T13:52:33.064+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:52:33.210+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T16:05:22.546+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [queued]>
[2025-07-24T16:05:22.555+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [queued]>
[2025-07-24T16:05:22.556+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T16:05:22.567+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 08:00:00+00:00
[2025-07-24T16:05:22.573+0000] {standard_task_runner.py:60} INFO - Started process 1764 to run task
[2025-07-24T16:05:22.575+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T08:00:00+00:00', '--job-id', '1341', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp5jymoybu']
[2025-07-24T16:05:22.578+0000] {standard_task_runner.py:88} INFO - Job 1341: Subtask Load_songplays_fact_table
[2025-07-24T16:05:22.637+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T16:05:22.710+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T08:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T08:00:00+00:00'
[2025-07-24T16:05:24.846+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T16:05:24.856+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T080000, start_date=20250724T160522, end_date=20250724T160524
[2025-07-24T16:05:24.876+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T16:05:24.904+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:17:52.142+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [queued]>
[2025-07-24T17:17:52.157+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [queued]>
[2025-07-24T17:17:52.159+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:17:52.181+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 08:00:00+00:00
[2025-07-24T17:17:52.189+0000] {standard_task_runner.py:60} INFO - Started process 1485 to run task
[2025-07-24T17:17:52.201+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T08:00:00+00:00', '--job-id', '2082', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp1njhcf9p']
[2025-07-24T17:17:52.219+0000] {standard_task_runner.py:88} INFO - Job 2082: Subtask Load_songplays_fact_table
[2025-07-24T17:17:52.364+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T08:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:17:52.497+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T08:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T08:00:00+00:00'
[2025-07-24T17:17:52.623+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:17:52.639+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T080000, start_date=20250724T171752, end_date=20250724T171752
[2025-07-24T17:17:52.701+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:17:52.748+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
